# lunabot_drive

./: BUCKET_ACTUATOR_SOFTWARE_SPEC.md  CMakeLists.txt  LUNABOT_DRIVE_NEXT_STEPS.md  PI5_PIN_ASSIGNMENTS.md  README.md  camera_only_nav2_testing_plan.md  package.xml
config/: bucket_actuators.yaml  camera_only_nav2.yaml  ekf.yaml  oak_d_camera.yaml  oak_d_pointcloud_only.yaml  oak_d_rgb_only.yaml  switch_pro.yaml
config/params/: ekf_params.yaml  nav2_params.yaml
config/rviz/: camera_only_nav2.rviz  oak_d_camera.rviz
description/: inertial_macros.xacro  oak_d_s2.xacro  robot.urdf.xacro  robot_core.xacro
docs/: CAMERA_ONLY_NAV2.md  OAK_D_S2_INTEGRATION.md  motor_logging.md
launch/: actuator_test.launch.py  apriltag_detection.launch.py  bucket_bringup.launch.py  camera_mapping_test.launch.py  camera_only_nav2.launch.py  full_bringup.launch.py  hardware_bringup.launch.py  motor_test_rviz.launch.py  motors_rviz.launch.py  oak_d_camera.launch.py  oak_d_rviz.launch.py  pc_teleop.launch.py  pi_drive.launch.py
nodes/: actuator_driver_node.py  bandwidth_monitor.py  bucket_teleop_node.py
scripts/: initialise_can
src/: drive_node.cpp  minimal_drive.cpp  motor_logger.hpp
urdf/: lunabot.urdf.xacro
