<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lunabot_drive</name>
  <version>0.1.0</version>
  <description>Motor drive control for Lunabot rover using SparkFlex controllers</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>sparkcan</depend>

  <!-- OAK-D Camera dependencies (runtime only) -->
  <exec_depend>depthai_ros_driver</exec_depend>
  <exec_depend>depthai_descriptions</exec_depend>

  <!-- Visualization dependencies -->
  <exec_depend>rviz2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <!-- Navigation and localization -->
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>

  <!-- AprilTag detection -->
  <exec_depend>apriltag_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
